--- a/styles_pic.css
+++ b/styles_pic.css
@@ -2960,3 +2960,15 @@ table {
             border-radius: 3px; 
             text-decoration: none;
         }
+
+        .container_image {
+            display: flex;
+            justify-content: center; /* Center horizontally */
+            align-items: center; /* Center vertically */
+            height: 100vh; /* Make the container full height of the viewport */
+        }
+
+        .centered-image {
+            max-width: 100%; /* Ensure the image doesn't exceed the container width */
+            max-height: 100%; /* Ensure the image doesn't exceed the container height */
+        }
